--- a/src/pages/Home/Details/details.css
+++ b/src/pages/Home/Details/details.css
@@ -9,24 +9,30 @@
 }
 
 .info-card-holder{
-    padding: 17px;
+    border-bottom: 1px solid gray;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 1px solid gray;
-    gap: 10px;
+    flex-direction: column;
+    gap: 30px;
 }
 .info-card-img-holder{
-    width: 70px;
-    height: 70px;
+    width: 100%;
+    border-bottom: 1px solid gray;
     overflow: hidden;
-    border-radius: 50%;
+    height: 200px;
 }
 .info-card-img{
     object-fit: cover;
     width: 100%;
     height: 100%;
+}
+.info-detail{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 10px;
 }
 .info-card-name{
     font-size: 15px;
