--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -70,11 +70,16 @@
     border-right: 1px solid gray;
 }
 
-.chat-holder-dp {
-    width: 40px;
-    height: 40px;
+.chat-holder-dpp {
+    width: 50px;
+    height: 50px;
     overflow: hidden;
     border-radius: 50%;
+}
+.chat-dp{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .chat-holder-nav {
@@ -107,7 +112,7 @@
     justify-content: space-between;
     padding: 5px 10px;
     align-items: center;
-    height: 10vh;
+    height: 12vh;
     border-bottom: 1px solid gray;
 }
 .main-nav:hover{
@@ -140,7 +145,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* height: 10vh; */
+    height: 10vh;
     border-top: 1px solid gray;
 }
 
@@ -279,6 +284,9 @@
     }
     .inner-main-input{
         gap: 10px;
+    }
+    .details-container{
+        width: 100%;
     }
 }
 
